Another fix to e2e-ci.yml

--- a/.github/workflows/e2e-ci.yml
+++ b/.github/workflows/e2e-ci.yml
@@ -13,3 +13,4 @@ jobs:
       - name: install playwright browsers
         run: npx playwright install --with-deps
       - name: npm run test:chrome
+        run: npm run test:chrome
